// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Email should render 1`] = `
<label
  class="input default"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-envelope"
      class="icon default su-envelope"
    />
  </div>
  <input
    type="email"
    value=""
  />
</label>
`;

exports[`Email should render error 1`] = `
<label
  class="input default error"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-envelope"
      class="icon default su-envelope"
    />
  </div>
  <input
    type="email"
    value=""
  />
</label>
`;

exports[`Email should render error when invalid value is set 1`] = `
<label
  class="input default"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-envelope"
      class="icon default su-envelope"
    />
  </div>
  <input
    type="email"
    value=""
  />
</label>
`;

exports[`Email should render error when invalid value is set 2`] = `
<label
  class="input default"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-envelope"
      class="icon default su-envelope"
    />
  </div>
  <input
    type="email"
    value=""
  />
</label>
`;

exports[`Email should render null value as empty string 1`] = `
<label
  class="input default"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-envelope"
      class="icon default su-envelope"
    />
  </div>
  <input
    type="email"
    value=""
  />
</label>
`;

exports[`Email should render with placeholder 1`] = `
<label
  class="input default"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-envelope"
      class="icon default su-envelope"
    />
  </div>
  <input
    placeholder="My placeholder"
    type="email"
    value=""
  />
</label>
`;

exports[`Email should render with value 1`] = `
<label
  class="input default"
>
  <div
    class="prependedContainer default"
  >
    <span
      aria-label="su-envelope"
      class="icon default iconClickable su-envelope clickable"
      role="button"
      tabindex="0"
    />
  </div>
  <input
    type="email"
    value=""
  />
</label>
`;
